Prevent torrent indicators in player to overflow with small sizes

--- a/client/src/sass/player/peertube-skin.scss
+++ b/client/src/sass/player/peertube-skin.scss
@@ -271,6 +271,7 @@ body {
       line-height: $control-bar-height;
       text-align: right;
       margin-right: 6px;
+      overflow: hidden;
 
       .vjs-peertube-displayed {
         display: block;
